# platon-gtk

./: .gitmodules  LICENSE  application.c  application.h  application.vala  editor_widget.cpp  editor_widget.h  meson.build  platon.vapi  window.c  window.h
src/: Application.vala  EditView.vala  Line.vala  Theme.vala  Window.vala
